[gd_scene load_steps=2 format=3 uid="uid://clrlc230reopg"]

[ext_resource type="Script" uid="uid://gacpu2s78cpu" path="res://chat/Chat.gd" id="1_lb2i0"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lb2i0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 43.0
offset_right = 950.0
offset_bottom = 543.0

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 450)
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MessageInput" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nachricht hier eingeben"
max_length = 250

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Senden"
